--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,9 @@
-Here’s a requirements.txt file for your project, covering YOLOv8, FastAPI, and React integration:
-
-# Object Detection & Tracking
-ultralytics==8.1.0  # YOLOv8 for object detection
-opencv-python==4.8.0.74  # OpenCV for image processing
-numpy==1.23.5  # Array operations
-scipy==1.11.3  # Mathematical operations
-torch==2.0.1  # PyTorch for YOLOv8
-torchvision==0.15.2  # PyTorch vision utilities
-
-# Multi-Object Tracking
-lap==0.4.0  # Linear Assignment Problem solver
-filterpy==1.4.5  # Kalman Filter for tracking
-supervision==0.11.0  # Helps in video annotation
-deep-sort-realtime==1.3.0  # Multi-camera object tracking
-
-# FastAPI Backend
-fastapi==0.103.2  # API framework
-uvicorn==0.23.2  # ASGI server
-pydantic==1.10.4  # Data validation
-
-# Frontend Communication
-requests==2.31.0  # Sending requests from backend to frontend
-websockets==11.0.3  # Real-time streaming support
-
-# Database (Optional: If using Firebase)
-firebase-admin==6.2.0  # Storing alerts and logs
-
-# Visualization
-matplotlib==3.8.0  # Plotting results
-seaborn==0.12.2  # Statistical visualization
-
-📌 How to Install?
-
-Run this command inside your virtual environment:
-
-pip install -r requirements.txt
-
-Let me know if you need additional dependencies based on your exact setup! 🚀
+# requirements.txt
+numpy==1.23.5
+torch==1.13.1
+torchvision==0.14.1
+ultralytics==8.0.196
+opencv-python==4.7.0.72
+gym==0.26.2
+stable-baselines3==1.8.0
+screeninfo==0.8.1
